alignment fixes

--- a/css/bitstyle.css
+++ b/css/bitstyle.css
@@ -66,6 +66,5 @@
 }
 
 #analytics-enabled-checkbox {
-    float: right;
-    margin-right: 2rem;
+    margin-top:0.75rem;
 }
